--- a/journals/00-objectives_and_ideas/00-objectives_and_ideas.Rmd
+++ b/journals/00-objectives_and_ideas/00-objectives_and_ideas.Rmd
@@ -23,6 +23,72 @@ This journal explains the objectives and ideas for the research project on apply
 - Consider ways to improvement LIME
 - Apply LIME (or some improved version of LIME) to interpret the random forest model fit to the Hamby bullet data
 
+### Ideas
+
+**LIME diagnostics**  
+
+- turn repetitive code into functions
+- try out different weights
+- change distance matrix in seriation to be 5-# of variables shared between two rows
+- try using distance matrix computed on the feature value with seriation
+- add in feature selection methods to LIME input options
+- think of a way to compute consistency across top two features
+- Siggi suggests refitting the RF model to the perturbations and then continuing with LIME with the RF predictions from the new model - this may help to understand if the problems are due to the sampling procedure or LIME itself
+- he also suggested looking into SMOTE for dealing the imbalance in the classes with sampling
+- compare the simple models based on different number of bins using an F-test
+- look into computing a diversity or consistency measure for the sensitivity analysis
+- include a penalty for the number of parameters when choosing bins
+- look at the AUC after binning
+- compute a likelihood ratio prob TRUE / prob FALSE from the LIME ridge regression
+- try visualizing the features from the test data using dimension reduction and
+coloring them by variables suggested to be important by lime
+- Could try fitting a regression with interactions and see if LIME does a good job of explaining a model that is already interpretable.
+- Maybe we could come up with a test to compare between global and local explanations (but how would we do this?)  
+  
+**Explainer Models**
+
+- read through papers giving an overview of the current explanation methods
+- look into iml (https://www.youtube.com/watch?v=jP6Rg13PEkQ)
+- look more into Molnar and his adviser Bernd
+- look into [MAPLE](https://blog.ml.cmu.edu/2019/07/13/towards-interpretable-tree-ensembles/)
+    
+**Understanding LIME**
+
+- Run a simulation to understand if LIME is working
+    - could implement a couple of local linear dependencies
+    - piece this together
+    - could include interactions in the model
+    - does lime find the local models?
+- edit details in understanding LIME journal
+- look at the RF in the local region lime is considering to see if it agrees with the lime explanations
+- try fitting LASSO logistic model and leave one out approach (for multicollinarity)
+- assess lime results on logistic regression models
+- try reticulate R package to apply python version of lime
+- look into literature on binning methods
+- think about why R^2 would be better for some binning methods
+- read new paper on Anchor
+    
+**Possible Improvements to LIME**
+
+- determine the best number of bins to use for each variable
+- try out subsampling idea
+
+**Simulation with RF**
+
+- think about how to implement a simulation with a random forest
+- look back at 601 notes from Kaiser for model assessment
+- look at Hadley's 'removing the blindfold' for ideas
+- read book Dr. Dixon lent me on sensitivity analyses
+
+**Random Forests Confidence Intervals**
+
+- look into papers by Giles Hooker and Lucas Mentch
+- Dr. Nettleton paper
+
+**Random Forest Interpretations**
+
+- read https://www.r-bloggers.com/explaining-predictions-random-forest-post-hoc-analysis-randomforestexplainer-package/
+
 ### Possible Papers
 
 Here are ideas for possible papers.
@@ -50,16 +116,6 @@ The following are some of the concerns that we have with the current state of th
 - When you have a large number of predictions to assess, would it be a good idea to focus in on the ones that have the best fitting linear model or produce the most consistent results?
 - What can be done to improve the linear regression model fit? Maybe adjusting the number of bins or the kernel width would help with this.
 - We think that the model explainer needs to be close enough to the complex model that it is trying to explain in order to do a good job of providing explanations. For example, the binned regression works okay with neural networks, but it does not work well with a random forest. Maybe a tree explainer or a logistic regression explainer would work better with a random forest.
-
-# Ideas to Try
-
-- Could try fitting a regression with interactions and see if LIME does a good job of explaining a model that is already interpretable.
-- Run a simulation to understand if LIME is working
-    - could implement a couple of local linear dependencies
-    - piece this together
-    - could include interactions in the model
-    - does lime find the local models?
-- Maybe we could come up with a test to compare between global and local explanations (but how would we do this?)
 
 # General Thoughts
 
