--- a/journals/00-objectives_and_ideas/00-objectives_and_ideas.Rmd
+++ b/journals/00-objectives_and_ideas/00-objectives_and_ideas.Rmd
@@ -5,8 +5,10 @@ date: "`r format(Sys.time(), '%B %d, %Y')`"
 output:
   html_document:
     toc: true
-    toc_depth: 3
+    toc_depth: 5
     toc_float: true
+    theme: cerulean
+    highlight: textmate
 ---
 
 ```{r setup, include=FALSE}
